[feature] Use newer Java 8 JVM memory options for better compatibility with Docker. Backported from FusionDB